# DeepMedPipeline

./: .gitignore  README.md  main.py  pyproject.toml
configs/pbr/: infer.yml
dmp/: main.py
dmp/commands/: app_infer.py
dmp/ml/: loops_fabric.py  registry.py
dmp/ml/data/pbr/: pbr_datamodule.py  pbr_dataset.py
dmp/ml/data/pbr_gen/: __init__.py  pbr_datamodule.py  pbr_dataset.py
dmp/ml/models/diffunet/: lit_dunet.py
dmp/ml/models/unet3d/: lit_unet.py
dmp/modules/: inference_module.py  utils.py
